[package]
name = "libvirt-cli"
version = "0.1.0"
edition = "2021"
description = "This is a project for interfacing with libvirt"
repository = "https://github.com/lucassimpson0213/libvirt-cli"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
